# rs_addons

./: CMakeLists.txt  README.md  package.xml  setup.py
include/rs_classifiers/classifiers/: RSClassifier.h  RSKNN.h  RSRF.h  RSSVM.h
include/rs_classifiers/types/: all_types.h  type_definitions.h
src/: CaffeClassificationAnnotator.cpp  KnnAnnotator.cpp  RfAnnotator.cpp  SvmAnnotator.cpp
src/classifiers/: RSClassifier.cpp  RSKNN.cpp  RSRF.cpp  RSSVM.cpp
src/tools/: classifier_trainer.cpp
